Bug 875069 - nsSVGPathGeometryFrame::NotifySVGChanged needs to take account of stroke-width and non-scaling-stroke. r=dholbert