layout/svg/nsSVGPathGeometryFrame.cpp
@@ -362,10 +362,31 @@ nsSVGPathGeometryFrame::NotifySVGChanged(uint32_t aFlags)
   // are rendered as part of any rendering observers that we may have.
   // Therefore no need to notify rendering observers here.
 
-  if ((aFlags & COORD_CONTEXT_CHANGED) &&
-      static_cast<nsSVGPathGeometryElement*>(mContent)->GeometryDependsOnCoordCtx()) {
-    nsSVGUtils::ScheduleReflowSVG(this);
+  // Don't try to be too smart trying to avoid the ScheduleReflowSVG calls
+  // for the stroke properties examined below. Checking HasStroke() is not
+  // enough, since what we care about is whether we include the stroke in our
+  // overflow rects or not, and we sometimes deliberately include stroke
+  // when it's not visible. See the complexities of GetBBoxContribution.
+
+  if (aFlags & COORD_CONTEXT_CHANGED) {
+    // Stroke currently contributes to our mRect, which is why we have to take
+    // account of stroke-width here. Note that we do not need to take account
+    // of stroke-dashoffset since, although that can have a percentage value
+    // that is resolved against our coordinate context, it does not affect our
+    // mRect.
+    if (static_cast<nsSVGPathGeometryElement*>(mContent)->GeometryDependsOnCoordCtx() ||
+        StyleSVG()->mStrokeWidth.HasPercent()) {
+      nsSVGUtils::ScheduleReflowSVG(this);
+    }
   }
+
+  if ((aFlags & TRANSFORM_CHANGED) &&
+      StyleSVGReset()->mVectorEffect ==
+        NS_STYLE_VECTOR_EFFECT_NON_SCALING_STROKE) {
+    // Stroke currently contributes to our mRect, and our stroke depends on
+    // the transform to our outer-<svg> if |vector-effect:non-scaling-stroke|.
+    nsSVGUtils::ScheduleReflowSVG(this);
+  } 
 }
 
 SVGBBox
